--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Testing DJREACT with Yarn</title>
+    <title>Testing Django - React</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
 <body>
-    <div id="main">
       <div id="app"></div>
-    </div>
     <script src="{% static 'frontend/main.js' %}"></script>
   </body>
 </html>
